NetBSD Problem Report #50660

From www@NetBSD.org  Sat Jan 16 17:16:06 2016
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.NetBSD.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 95B4A7ABE6
	for <gnats-bugs@gnats.NetBSD.org>; Sat, 16 Jan 2016 17:16:06 +0000 (UTC)
Message-Id: <20160116171605.BFAC97ACC6@mollari.NetBSD.org>
Date: Sat, 16 Jan 2016 17:16:05 +0000 (UTC)
From: dcb314@hotmail.com
Reply-To: dcb314@hotmail.com
To: gnats-bugs@NetBSD.org
Subject: src/lib/libm/noieee_src/n_fmod.c: 4 * bad call to printf ?
X-Send-Pr-Version: www-1.0

>Number:         50660
>Category:       lib
>Synopsis:       src/lib/libm/noieee_src/n_fmod.c: 4 * bad call to printf ?
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    lib-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sat Jan 16 17:20:00 +0000 2016
>Closed-Date:    Sun Jan 17 02:06:31 +0000 2016
>Last-Modified:  Sun Jan 17 02:06:31 +0000 2016
>Originator:     David Binderman
>Release:        cvs dated 20160110
>Organization:
>Environment:
>Description:

1.

[src/lib/libm/noieee_src/n_fmod.c:125]: (error) printf format string requires 3 parameters but only 2 are given.

[src/lib/libm/noieee_src/n_fmod.c:126]: (error) printf format string requires 3 parameters but only 2 are given.
[src/lib/libm/noieee_src/n_fmod.c:127]: (error) printf format string requires 3 parameters but only 2 are given.
[src/lib/libm/noieee_src/n_fmod.c:128]: (error) printf format string requires 3 parameters but only 2 are given.


        (void)printf(" x    = 0x%08.8x %08.8x (%24.16e)\n",x,x);
        (void)printf(" y    = 0x%08.8x %08.8x (%24.16e)\n",y,y);
        (void)printf(" fmod = 0x%08.8x %08.8x (%24.16e)\n",ro,ro);
        (void)printf("_fmod = 0x%08.8x %08.8x (%24.16e)\n",rn,rn);

>How-To-Repeat:

>Fix:

>Release-Note:

>Audit-Trail:
From: "Christos Zoulas" <christos@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/50660 CVS commit: src/lib/libm/noieee_src
Date: Sat, 16 Jan 2016 14:44:05 -0500

 Module Name:	src
 Committed By:	christos
 Date:		Sat Jan 16 19:44:05 UTC 2016

 Modified Files:
 	src/lib/libm/noieee_src: n_fmod.c

 Log Message:
 PR/50660: David Binderman: bad calls to printf, in test part


 To generate a diff of this commit:
 cvs rdiff -u -r1.7 -r1.8 src/lib/libm/noieee_src/n_fmod.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: wiz@NetBSD.org
State-Changed-When: Sun, 17 Jan 2016 02:06:31 +0000
State-Changed-Why:
Thanks! Fixed by christos.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.