PR/50660: David Binderman: bad calls to printf, in test part